[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Practice/Enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 48.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 48.0

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -31.6148, -31.8968, 31.9726, -32.1471, 32.7237, 31.6906, -31.8651, 31.4403 )

[sub_resource type="CircleShape2D" id=4]
radius = 219.002

[node name="Enemy" type="KinematicBody2D"]
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
light_mask = 0
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 4 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HitBox_area_entered"]
